# rethinking

./: .pre-commit-config.yaml  Homework 1.ipynb  Homework 2.ipynb  Homework 3.ipynb  Lesson 2.ipynb  Lesson 3.ipynb  README.md  Testing.ipynb  pyproject.toml
