[tool.poetry]
name = "rethinking"
version = "0.1.0"
description = "UofBayes Winter 2020/21 Statistical Rethinking course, Python edition"
authors = ["Jean Nassar <jn.masasin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1"
pymc3 = "^3.10.0"
seaborn = "^0.11.0"
arviz = "^0.10.0"

[tool.poetry.dev-dependencies]
ipykernel = "^5.4.0"
ipympl = "^0.5.8"

[tool.nbqa.mutate]
isort = 1
black = 1

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
